v1.12.0
 Bugfix:
  - Fixed POL focus WB Warmate not granting tech bonuses for BBA owners.
  - Improved POL social media focuses tooltips
  - Improved POL focus C-130 Hercules
  - Several fixes for Polish-Ukrainina war escalation, triggering now only in offensive war against Ukraine and when UPR party is in power.
  - Early Submarine Engine is now researched on start for POL

v1.11.3

 AI:
  - Rewrite the influence AI to closer to the investment AI where it evaluates by country context
  - Fixed the AI not wanting to take European Parliament measures due to them having a lone factor of 0
  - Improved the AIs performance when evaluating whether to push for laws or decisions
  - Improved the AI's willingness to naval invade other countries if they are within range
  - German AI improved, US and GB will keep troops in Germany, until called back or leave fraction

 Balance:
  - Adjusted the political power from 100 to 150 when you succeed in fixing the bankruptcy
  - Improved the EuroArmy Brigade so it's not nearly as shit for the European Union
  - Reduced the industrial cost of the heavy guns by half of the cost
  - Added a negative foreign influence modifier as you increase your intervention law from anything over isolation
  - Adjusted the EU-Turkey Deal to not be able to be done unless Turkey is not in the European Union (no it does not block any law progression)
  - Rebalanced the Fossil Fuel Industry vs Renewable Energy choice in the Brazilian focus tree in the economic tree
  - Added a clamp so the minimum possible workforce that can be in a country is 0.01 in total
  - Added some Western Support to the NATO member idea and some defensive stability and war support to better represent it being a defensive alliance
  - Reduced the speed penalty of the Double Barrel and Laser Beam cannon
  - Rebalanced some of the Ethiopian decisions so they add influence to Ethiopia from china but reduces costs on Ethiopia for expanding infrastructure