@@ -11942,80 +11942,15 @@ focus_tree = {
 	}
 
 	focus = {
-		id = POL_alcm
-		icon = bombs3
-		x = 0
-		y = 1
-		relative_position_id = POL_nuclear_shelters
-		cost = 5
-
-		prerequisite = { focus = POL_nuclear_shelters }
-		mutually_exclusive = {
-			focus = POL_glcm
-			focus = POL_slcm
-		}
-
-		search_filters = {
-			FOCUS_FILTER_RESEARCH
-			FOCUS_FILTER_EXPENDITURE
-		}
-
-		completion_reward = {
-			log = "[GetDateText]: [Root.GetName]: Focus POL_alcm"
-			add_tech_bonus = {
-				name = CAT_alcm
-				bonus = 0.1
-				uses = 2
-				category = CAT_alcm
-			}
-			set_temp_variable = { treasury_change = -15 }
-			modify_treasury_effect = yes
-		}
-
-		ai_will_do = { factor = 30 }
-	}
-
-	focus = {
-		id = POL_new_fighter_launchers
-		icon = advan_fighters
-		x = 0
-		y = 1
-		relative_position_id = POL_alcm
-		cost = 5
-
-		prerequisite = { focus = POL_alcm }
-
-		search_filters = {
-			FOCUS_FILTER_RESEARCH
-			FOCUS_FILTER_EXPENDITURE
-		}
-
-		completion_reward = {
-			log = "[GetDateText]: [Root.GetName]: Focus POL_new_fighter_launchers"
-			add_tech_bonus = {
-				name = POL_new_fighter_launchers
-				bonus = 0.25
-				uses = 1
-				category = CAT_cm
-			}
-			set_temp_variable = { treasury_change = -25 }
-			modify_treasury_effect = yes
-		}
-
-		ai_will_do = { factor = 30 }
-	}
-
-	focus = {
 		id = POL_glcm
 		icon = KORNET
-		x = 2
+		x = 0
 		y = 1
 		relative_position_id = POL_nuclear_shelters
 		cost = 5
 
 		prerequisite = { focus = POL_nuclear_shelters }
 		mutually_exclusive = {
-			focus = POL_alcm
 			focus = POL_slcm
 		}
 
@@ -12056,78 +11991,11 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus POL_tel_battery"
-			if = {
-				limit = {
-					NOT = {
-						has_tech = TEL_launched_missiles
-					}
-				}
-				add_tech_bonus = {
-					name = POL_tel_battery
-					bonus = 0.1
-					uses = 1
-					technology = TEL_launched_missiles
-				}
-			}
-			else_if = {
-				limit = {
-					NOT = {
-						has_tech = TEL_3
-					}
-				}
-				add_tech_bonus = {
-					name = POL_tel_battery
-					bonus = 0.1
-					uses = 1
-					technology = TEL_3
-				}
-			}
-			else_if = {
-				limit = {
-					NOT = {
-						has_tech = TEL_4
-					}
-				}
-				add_tech_bonus = {
-					name = POL_tel_battery
-					bonus = 0.1
-					uses = 1
-					technology = TEL_4
-				}
-			}
-			else_if = {
-				limit = {
-					NOT = {
-						has_tech = TEL_5
-					}
-				}
-				add_tech_bonus = {
-					name = POL_tel_battery
-					bonus = 0.1
-					uses = 1
-					technology = TEL_5
-				}
-			}
-			else_if = {
-				limit = {
-					NOT = {
-						has_tech = TEL_6
-					}
-				}
-				add_tech_bonus = {
-					name = POL_tel_battery
-					bonus = 0.1
-					uses = 1
-					technology = TEL_6
-				}
-			}
-			else = {
-				add_tech_bonus = {
-					name = CAT_glcm
-					bonus = 0.1
-					uses = 1
-					category = CAT_glcm
-				}
+			add_tech_bonus = {
+				name = POL_tel_battery
+				bonus = 0.2
+				uses = 1
+				category = CAT_glcm
 			}
 			set_temp_variable = { treasury_change = -10 }
 			modify_treasury_effect = yes
@@ -12139,14 +12007,13 @@ focus_tree = {
 	focus = {
 		id = POL_hypersonic_missiles
 		icon = attack_democracy4
-		x = 0
+		x = 1
 		y = 1
 		relative_position_id = POL_tel_battery
 		cost = 5
 
 		prerequisite = {
 			focus = POL_tel_battery
-			focus = POL_new_fighter_launchers
 			focus = POL_missile_submarines
 		}
 
@@ -12173,7 +12040,7 @@ focus_tree = {
 	focus = {
 		id = POL_slcm
 		icon = focus_rocketry
-		x = 4
+		x = 2
 		y = 1
 		relative_position_id = POL_nuclear_shelters
 		cost = 5
@@ -12181,7 +12048,6 @@ focus_tree = {
 		prerequisite = { focus = POL_nuclear_shelters }
 		mutually_exclusive = {
 			focus = POL_glcm
-			focus = POL_alcm
 		}
 
 		search_filters = {
@@ -12195,7 +12061,7 @@ focus_tree = {
 				name = CAT_slcm
 				bonus = 0.1
 				uses = 2
-				category = CAT_slcm
+				category = CAT_sam
 			}
 			set_temp_variable = { treasury_change = -15 }
 			modify_treasury_effect = yes
@@ -12227,7 +12093,7 @@ focus_tree = {
 				}
 				add_tech_bonus = {
 					name = CAT_sub
-					bonus = 0.11
+					bonus = 0.2
 					uses = 1
 					category = CAT_sub
 				}
@@ -12250,9 +12116,9 @@ focus_tree = {
 	focus = {
 		id = POL_camouflage
 		icon = cryptologic_bomb
-		x = -2
-		y = 2
-		relative_position_id = POL_missile_submarines
+		x = 0
+		y = 1
+		relative_position_id = POL_hypersonic_missiles
 		cost = 5
 
 		prerequisite = {
@@ -12266,24 +12132,12 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus POL_camouflage"
-			# add_tech_bonus = {
-			# 	name = POL_camouflage
-			# 	bonus = 0.11
-			# 	uses = 1
-			# 	technology = ICBM4_MIRV
-			# }
-			# add_tech_bonus = {
-			# 	name = POL_camouflage
-			# 	bonus = 0.11
-			# 	uses = 1
-			# 	technology = ICBM5_MIRV
-			# }
-			# add_tech_bonus = {
-			# 	name = POL_camouflage
-			# 	bonus = 0.11
-			# 	uses = 1
-			# 	technology = ICBM6_MIRV
-			# }
+			add_tech_bonus = {
+				name = POL_camouflage
+				bonus = 0.35
+				uses = 2
+				category = CAT_missile
+			}
 			set_temp_variable = { treasury_change = -26 }
 			modify_treasury_effect = yes
 		}
