@@ -1382,12 +1382,6 @@
  POL_nuclear_shelters: "Nuclear Shelters"
  POL_nuclear_shelters_desc: "Nuclear shelters should be publicly available to as many inhabitants of each voivodeship as possible."
 
- POL_alcm: "ALCM"
- POL_alcm_desc: "A strategic air-to-ground cruise missile, originally intended to carry a nuclear warhead, is today classified as a precision-guided weapon."
-
- POL_new_fighter_launchers: "New Fighter Launchers"
- POL_new_fighter_launchers_desc: "Our planes will be able to store the new missiles, but we need strong launchers to make them fly."
-
  POL_glcm: "GLCM"
  POL_glcm_desc: "A ground-to-ground class cruise missile, based on Tomahawk, systematically integrated with a mobile land launcher of the TEL type on a car chassis."
 
