@@ -5,6 +5,7 @@ v1.12.0
   - Improved POL focus C-130 Hercules
   - Several fixes for Polish-Ukrainina war escalation, triggering now only in offensive war against Ukraine and when UPR party is in power.
   - Early Submarine Engine is now researched on start for POL
+  - Fixed POL missile focuses, removed ALCM focus
 
 v1.11.3
 
